Archive2/71/aa722c90f55261/output
main.cpp: In member function 'void Derived<T>::doDerivedWork()':
main.cpp:16:21: error: there are no arguments to 'doBaseWork' that depend on a template parameter, so a declaration of 'doBaseWork' must be available [-fpermissive]
          doBaseWork();
                     ^
main.cpp:16:21: note: (if you use '-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
